[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[features]
guest = []
compute_advice = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = ["guest-std", "stdout", "zk"] }
sha2 = "0.10"
ruint = "1.12.4"
oauth-verify = { path = "../oauth-verify" }
